Startup platform-for-bonita 3.5.2

--- a/packaging/bonita/src/main/resources/webapps/bonita/webapp/WEB-INF/classes/html/bonita_default_confirm.html
+++ b/packaging/bonita/src/main/resources/webapps/bonita/webapp/WEB-INF/classes/html/bonita_default_confirm.html
@@ -8,7 +8,7 @@
 <!--<div class="bonita_form_container">-->
 <!--<div id="bonita_form_confirm_message" class="bonita_form_confirm_message">-->
 <div style="border: 1px solid; margin: auto; width: 500px; height: 30px; text-align: center; padding-top: 5px">
-    <a href="/portal/bpm" target="_parent">Back to Homepage</a>
+    <a href="/portal/intranet" target="_parent">Back to Homepage</a>
 </div>
 <!--</div>-->
 <!--</div>-->
