PLF-3293 :[Bonita] Merge bonita features to intranet site PLF-3137 :[Bonita] Buttons "Publish" and "Refuse" are displayed one under the other PLF-3061 :Improve BUXP layout

--- a/packaging/bonita/src/main/resources/bonita/client/tenants/default/web/XP/looknfeel/default/BonitaConsole.html
+++ b/packaging/bonita/src/main/resources/bonita/client/tenants/default/web/XP/looknfeel/default/BonitaConsole.html
@@ -53,10 +53,9 @@
 					<div id="unified_panels_top_right_corner"></div>
 					<div id="unified_panels_shadow_top"></div>
 					<div id="left_panel">
-						<div id="WidgetContainerHeaderTop"></div>
 						<div id="SystemLabelBrowserContainer"></div>
 						<div>
-							<hr class="left_panel_separator"></hr>
+							<!--<hr class="left_panel_separator"></hr>-->
 						</div>
 						<div id="CategoryBrowserContainer"></div>
 						<div>
