PLF-3357 	Improve UXP of ProcessDocument drive PLF-3349 	Leave Application workflow form : bad field names PLF-3358 	Change BPM gadgets location on intranet home PLF-3359 	bad indentation on BP gadget PLF-3364 	change the Uri of page "BonitaTodo" to "tasks" PLF-3351 	BonitaTODO does not have same l&f as BonitaXP PLF-3352 	message displayed on activity stream is cryptic

--- a/bonita/samples/workflow/publication/src/main/resources/studio-templates/_8EgSMKxuEeCnwf-KdRsvXg/html/_B-ZJ0KyHEeCFX6xLi73Ozg.html
+++ b/bonita/samples/workflow/publication/src/main/resources/studio-templates/_8EgSMKxuEeCnwf-KdRsvXg/html/_B-ZJ0KyHEeCFX6xLi73Ozg.html
@@ -6,7 +6,7 @@
 		<link href="css/bonita_form_default.css" rel="stylesheet" type="text/css"/>
 			<link href="css/generatedcss.css" rel="stylesheet" type="text/css"/>
 </head>
-	<body style="border: 1px solid black;margin-left: 23%;margin-right: 23%;">
+	<body style="margin-left: 23%;margin-right: 23%;">
 	<style>
 	.bonita_form_label_left {
     text-align: left;
@@ -47,11 +47,11 @@
     font-size: 13px;
     font-weight: bold;
     height: auto;
-    text-align: left;
+    text-align: center;
     width: 100%;
 }
 	</style>
-		<div id="bonita_form_page_label" class="bonita_form_page_label" style="border-bottom: 1px solid black;"></div>
+		<div id="bonita_form_page_label" class="bonita_form_page_label" style="border: 1px solid black;"></div>
 		<div class="bonita_form_container">
     <div>
        <div>
@@ -84,10 +84,10 @@
       </tr>
       <tr class="Validation_Verification_Row3">
         <td class="widget_Validation_Verification_Champ_texte1" colspan="2" rowspan="1">
-		<FIELDSET style="margin-left: 20%;width: 74%;">
+		<FIELDSET style="margin-left: 138px;width: 75%;padding-left: 8px;padding-right: 5px;">
 		
         <LEGEND align=top><b>Last Comments</b></LEGEND>
-          <div id="Champ_texte1" style=" height: 100px; max-width: 500px; overflow : auto;">
+          <div id="Champ_texte1" style=" height: 100px; overflow : auto;">
            </div>
 		    </FIELDSET>
          </td>
